# entropy-playground

./: .dockerignore  .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  LICENSE  docker-compose.yml  pyproject.toml  readme.md
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/scripts/: README.md  create-issues.py  setup-labels.py  setup-labels.sh
.github/workflows/: ci.yml  docker.yml  lint.yml  python-tests.yml  release.yml  security.yml  type-check.yml
docs/: index.md
docs/api/: index.md
docs/architecture/: overview.md
docs/guides/: docker-setup.md  getting-started.md
entropy_playground/: __init__.py
entropy_playground/agents/: __init__.py  base.py
entropy_playground/ai/: __init__.py  claude.py  prompts.py
entropy_playground/cli/: __init__.py  exceptions.py  main.py
entropy_playground/github/: __init__.py  client.py  models.py
entropy_playground/infrastructure/: __init__.py  config.py
entropy_playground/logging/: __init__.py  aggregator.py  audit.py  cloudwatch.py  logger.py
entropy_playground/runtime/: __init__.py  registry.py  state.py
terraform/: ECS_DEPLOYMENT.md  Makefile  README.md  backend.conf.example  main.tf  outputs.tf  variables.tf
terraform/environments/dev/: terraform.tfvars.ecs.example  terraform.tfvars.example
terraform/environments/prod/: terraform.tfvars.ecs.example  terraform.tfvars.example
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/scripts/: agent-init.sh
terraform/scripts/ecs/: deploy.sh  monitor.sh  rollback.sh
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_agent_base.py  test_agent_registry.py  test_logging.py
tests/unit/ai/: __init__.py  test_claude.py  test_prompts.py
tests/unit/cli/: __init__.py  test_config.py  test_exceptions.py  test_main.py
tests/unit/github/: __init__.py  test_client.py  test_models.py
tests/unit/runtime/: __init__.py  test_state.py
